--- a/package.json
+++ b/package.json
@@ -1,1 +1,77 @@
-{}
+{
+  "name": "faweb-game-template",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.689.0",
+    "@aws-sdk/s3-request-presigner": "^3.689.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@next/third-parties": "^15.0.3",
+    "@nextui-org/breadcrumbs": "^2.0.13",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/link": "^2.0.35",
+    "@nextui-org/skeleton": "^2.0.32",
+    "@nextui-org/theme": "latest",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@tailwindcss/typography": "latest",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "latest",
+    "crypto-js": "latest",
+    "dayjs": "latest",
+    "framer-motion": "^11.11.13",
+    "google": "^2.1.0",
+    "gray-matter": "latest",
+    "jose": "latest",
+    "lucide-react": "^0.456.0",
+    "nanoid": "latest",
+    "next": "^14.0.0",
+    "next-app-theme": "^0.1.11",
+    "next-intl": "^3.25.0",
+    "next-mdx-remote": "latest",
+    "next-themes": "^0.4.3",
+    "radash": "latest",
+    "react": "^18.3.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-player": "^2.16.0",
+    "react-tweet": "^3.2.1",
+    "react-use": "latest",
+    "sonner": "^1.7.0",
+    "sugar-high": "^0.7.5",
+    "tailwindcss": "latest",
+    "tailwindcss-animate": "latest",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "latest",
+    "@next/mdx": "latest",
+    "@types/crypto-js": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "cssnano": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "postcss": "latest",
+    "prettier": "latest",
+    "raw-loader": "latest",
+    "remark-frontmatter": "latest",
+    "remark-gfm": "latest",
+    "remark-mdx-frontmatter": "latest",
+    "typescript": "latest",
+    "vitest": "latest"
+  }
+}
