--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@nextui-org/theme": "latest",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/typography": "latest",
@@ -30,6 +32,7 @@
     "clsx": "latest",
     "crypto-js": "latest",
     "dayjs": "latest",
+    "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.13",
     "google": "^2.1.0",
     "gray-matter": "latest",
@@ -52,6 +55,7 @@
     "sugar-high": "^0.7.5",
     "tailwindcss": "latest",
     "tailwindcss-animate": "latest",
+    "uploadthing": "^7.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
